--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,95 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
+/* navbar hover effect */
+.navUl li {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.navUl li p {
+  transform: translateY(0px);
+  opacity: 1;
+  transition: all 0.4s ease-in-out;
+}
+
+.navUl li span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s ease-in-out;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.navUl li:hover p {
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.navUl li:hover span {
+  opacity: 1;
+  transform: translateY(0px);
+  color: #3b9df8;
+}
+
+/* button hover effect */
+.buttonSecondary::after {
+  content: "";
+  background-color: #3b9df8;
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transform: translateX(-250px);
+  transition: all 0.3s ease-in-out;
+}
+
+.buttonSecondary:hover::after {
+  transform: translateY(0);
+}
+
+.buttonSecondary:hover {
+  color: #fff;
+}
+
+/* footer p hover effect */
+.footer li {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.footer li p {
+  transform: translateY(0px);
+  opacity: 1;
+  transition: all 0.4s ease-in-out;
+}
+
+.footer li span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s ease-in-out;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.footer li:hover p {
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+.footer li:hover span {
+  opacity: 1;
+  transform: translateY(0px);
+  color: #3b9df8;
+}
