--- a/src/index.css
+++ b/src/index.css
@@ -164,3 +164,8 @@ aside ul a:hover {
   height: 10px;
   transition: all 0.3s ease-in-out;
 }
+
+/* home */
+.serviceCard {
+  box-shadow: 0px 0px 20px 0px rgb(0, 0, 0, 0.07);
+}
