--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -13,22 +14,26 @@
 }
 
 *::selection {
-  background-color: #3b9df8;
+  background-color: #0471D6;
   color: #fff;
 }
 
 *::-webkit-scrollbar {
-  background-color: #3b9df825;
+  background-color: #012D57;
   width: 0.1rem;
 }
 
 *::-webkit-scrollbar-track {
-  background-color: #3b9df825;
+  background-color: #012D57;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #3b9df8;
+  background-color: #0471D6;
   border-radius: 30px;
+}
+
+.heroText {
+  font-family: "Unbounded", sans-serif;
 }
 
 .codeContainer::-webkit-scrollbar {
@@ -142,24 +147,24 @@ aside ul a {
 }
 
 aside ul a:hover {
-  background-color: #f3f6f9;
+  background-color: #013B62;
   font-weight: 500;
-  border-left: 1px solid #3b9df8;
+  border-left: 1px solid #9caebc;
 }
 
 /* sidebar component section header  */
 .sectionHeader {
-  color: #5e5e5e;
-  border-left: 1px solid #e5eaf2;
+  color: #0471d6;
+  border-left: 1px solid #9caebc;
 }
 .sectionHeader:hover {
   background-color: transparent;
   font-weight: 400;
-  border-left: 1px solid #e5eaf2;
+  border-left: 1px solid #9caebc;
 }
 .sectionHeader::after {
   content: "";
-  background-color: #c5c5c5;
+  background-color: #9caebc;
   top: -1%;
   left: -2.3%;
   position: absolute;
@@ -171,5 +176,21 @@ aside ul a:hover {
 
 /* home */
 .serviceCard {
-  box-shadow: 0px 0px 20px 0px rgb(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 20px 0px rgb(0, 0, 0, 0.3);
+}
+
+.heartIcon {
+  animation: zoomInZoomOut 1s ease-in-out infinite;
+}
+
+@keyframes zoomInZoomOut {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.1, 1.1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
 }
