--- a/src/index.css
+++ b/src/index.css
@@ -178,6 +178,9 @@ aside ul a:hover {
 .serviceCard {
   box-shadow: 0px 0px 20px 0px rgb(0, 0, 0, 0.3);
 }
+.sponsorCard {
+  box-shadow: 0px 0px 20px 0px rgb(0, 0, 0, 0.2);
+}
 
 .heartIcon {
   animation: zoomInZoomOut 1s ease-in-out infinite;
