all subtitle update complete

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,51 @@
   font-family: "Unbounded", sans-serif;
 }
 
+/* button sliding animation */
+.logos {
+  white-space: nowrap;
+}
+
+.logos:before,
+.logos:after {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  content: "";
+  z-index: 2;
+}
+
+/*.logos:before {*/
+/*  left: 0;*/
+/*  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);*/
+/*}*/
+
+/*.logos:after {*/
+/*  right: 0;*/
+/*  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);*/
+/*}*/
+
+.logos:hover .logos-slide {
+  animation-play-state: paused;
+}
+
+.logos-slide {
+  animation: 25s slide infinite linear;
+}
+
+.logos-slide a {
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
 .codeContainer::-webkit-scrollbar {
   display: none;
 }
