--- a/src/index.css
+++ b/src/index.css
@@ -273,3 +273,21 @@ aside ul a:hover {
     transform: translateX(100%)
   }
 }
+
+/* 2.0 upcoming badge  */
+.gradient-border {
+  position: relative;
+  padding: 2px;
+  background: linear-gradient(90deg, rgba(255,0,150,1) 0%, rgba(0,204,255,1) 100%);
+  border-radius: 9999px;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.gradient-border > div {
+  background: #0e2154;
+  border-radius: 9999px;
+  padding: 0.3rem 1rem;
+  display: flex;
+  align-items: center;
+}
