--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,9 @@ aside ul a:hover {
 .boxShadow {
   box-shadow: 0px 0px 10px 0px rgb(0, 0, 0, 0.1);
 }
+.notificationShadow {
+  box-shadow: 0px 0px 7px 0px #f2f2f2;
+}
 .sponsorCard {
   box-shadow: 0px 0px 20px 0px rgb(0, 0, 0, 0.2);
 }
@@ -295,4 +298,16 @@ aside ul a:hover {
   padding: 0.3rem 1rem;
   display: flex;
   align-items: center;
+}
+
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide the number input spinner in Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
